fix: navbar spacing

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    bottom: -17.17.88rem;
+    bottom: -17.88rem;
     left: 0;
     right: 0;
     background-color: var(--primary-clr);
